--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy HTML to GitHub Pages
 on:
   push:
     branches:
-      - main  # 监听 main 分支的推送事件
+      - master  # 监听 main 分支的推送事件
 
 jobs:
   deploy:
